<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_gray_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_head_height"
        android:background="@color/common_head_bg_color"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:drawableRight="@drawable/drawable_right"
            android:padding="8dp"
            android:text="长沙"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="舒社区"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big" />

        <TextView
            android:id="@+id/text_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:padding="8dp"
            android:text="反馈"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#fe872d" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dip" >

        <com.community.framework.widget.MyViewPager
            android:id="@+id/recomend_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <com.community.framework.widget.PageControl
            android:id="@+id/sy_swip_pagecontrol"
            android:layout_width="fill_parent"
            android:layout_height="15dip"
            android:layout_above="@+id/recomend_pager"
            android:layout_alignParentBottom="true"
            android:background="#70333333"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_homeworking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/index_home_economics" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/text_normal_style"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/clean_normal" />

                    <TextView
                        style="@style/text_normal_style"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="1px"
                        android:layout_weight="1"
                        android:text="@string/hourly_employee_long" />

                    <TextView
                        style="@style/text_normal_style"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="1px"
                        android:layout_weight="1"
                        android:text="@string/moon_baby_sitter" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1px"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/text_normal_style"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/clean_deep" />

                    <TextView
                        style="@style/text_normal_style"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="1px"
                        android:layout_weight="1"
                        android:text="@string/baby_sitter" />

                    <TextView
                        style="@style/text_normal_style"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="1px"
                        android:layout_weight="1"
                        android:text="@string/take_care_old" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/index_fresh" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/half_greens" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/soft_gray" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/organic_fruit" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/soft_gray" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/half_greens"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/index_assistant" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/expressage" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/soft_gray" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/freight" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/soft_gray" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/remove" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/index_health" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/medical_examination_report" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/soft_gray" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/order_doc" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/soft_gray" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/psychological_consulting" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>