<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_gray_color"
    android:orientation="vertical" >

    <include layout="@layout/common_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/common_bg_gray_color"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <TextView
                    style="@style/sign_text_style"
                    android:text="@string/serve_freqency" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ToggleButton
                        android:id="@+id/week1"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/week2"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/week3"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <ToggleButton
                        android:id="@+id/week4"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/week5"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/week6"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <ToggleButton
                        android:id="@+id/week7"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <ToggleButton
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <ToggleButton
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@color/deep_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text_normal_style"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/start_time" />

                <TextView
                    style="@style/text_normal_style"
                    android:layout_width="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/test_right"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/start_time_check" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text_normal_style"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/end_time" />

                <TextView
                    style="@style/text_normal_style"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/test_right"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/end_time_check" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/price_accept"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="20-50元/小时"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="20"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="25"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="30"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_normal" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/price_seekbar"
                style="@style/seekBarMyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:paddingBottom="10dp"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <TextView
                    style="@style/sign_text_style"
                    android:text="@string/is_have_pet" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal" >

                    <ToggleButton
                        android:id="@+id/big_dog"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/small_dog"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/cat"
                        style="@style/ToggleButton_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@color/deep_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/sign_text_style"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/fill_in_address" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/test_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/sign_text_style"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/fill_in_phone_num" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/test_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/deep_gray" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/test_commit_btn" />

</LinearLayout>